# SketchTool-Tuari

./: .gitignore  README.md  README_EN.md  README_JA.md  index.html  package-lock.json  package.json  style.css
.github/workflows/: build.yml
src/: app-controller.js  constants.js  dom.js  i18n.js  main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: common.rs  dialogs.rs  filesystem.rs  marks.rs  mod.rs  playback.rs  settings.rs  window.rs
src-tauri/src/storage/: marks.rs  mod.rs
src/api/: desktop.js
