[package]
name = "cosmos"
version = "2.0.0"
description = "Cosmos sketch tool rebuilt with Tauri"
authors = ["Cosmos"]
license = "MIT"
edition = "2021"

[lib]
name = "cosmos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.1", features = [] }

[dependencies]
objc2-app-kit = "0.3.2"
opener = "0.8.3"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = ["macos-private-api", "protocol-asset"] }
